Fix #27: Removed z-index override for the navbar.

--- a/scss/trema/header.scss
+++ b/scss/trema/header.scss
@@ -12,7 +12,6 @@
     text-transform: $text-transform;
     top: 0;
     width: 100%;
-    z-index: 10000;
 
     .site-name {
         color: #484b49;
